fix: allow line break in project description

--- a/assets/scss/project.scss
+++ b/assets/scss/project.scss
@@ -44,6 +44,7 @@
       padding: $space-lg 0 $space-xl;
       // font-size: $font-md;
       line-height: $space-xl;
+      white-space: pre-line;
     }
   }
 }
